...
      <Tab.Screen
        name="MyItems"
        component={MyItemsScreen}
        options={{ title: 'My items' }}
      />
      <Tab.Screen
        name="Activity"
        options={{ title: 'Inbox' }}
        listeners={{
          tabPress: fetchBadgeCount,
        }}
      >
        {(props) => <InboxScreen {...props} onRead={fetchBadgeCount} />}
...
